tools/editors/vscode-new/grammar/grammar.js
    source_file: $ => repeat($._top_level),

    _top_level: $ => choice(
      $.module_decl,
      $.import_decl,
      $.declaration,
    ),

    // ============================================================================
    // Comments
    // ============================================================================

    module_decl: $ => prec.right(seq(
      'module',
      field('name', $.module_name),
      optional($.module_exports),
      repeat($.declaration)
    )),

    module_name: $ => choice(
      '.cmdargs',
      '.options',
      sepBy1(token.immediate('.'), $.module_identifier_part)
    ),

    module_identifier_part: $ => /[a-zA-Z_][a-zA-Z0-9_\-]*/,

    module_exports: $ => seq(
      '{',
      commaSep(choice(
        $.identifier,
        $.module_reference,
        $.module_diff
      )),
      '}'
    ),

    import_decl: $ => seq(
      'import',
      field('path', $.module_name),
      optional(seq('as', field('alias', $.identifier)))
    ),

    // ============================================================================
    // Declarations
    // ============================================================================

    declaration: $ => choice(
      $.function_definition,
      $.function_template,
      $.class_decl,
      $.class_template,
      $.struct_decl,
      $.struct_template,
      $.union_decl,
      $.union_template,
      $.enum_decl,
      $.alias_decl,
      $.alias_template,
      $.extern_decl,
      $.export_decl,
      $.static_assert,
      seq($.variable_decl, ';'),
      $.static_if,
    ),

    // ----------------------------------------------------------------------------
    // Variables
    // ----------------------------------------------------------------------------

    variable_decl: $ => seq(
      optional($.attributes),
      optional(field('modifiers', $.decl_modifiers)),
      field('type', $.type),
      field('name', $.identifier),
      optional(seq('=', field('initializer', choice($.expression, $.initializer))))
    ),

    decl_modifiers: $ => repeat1(choice('static', 'inline', 'noinline')),

    // ----------------------------------------------------------------------------
    // Functions
    // ----------------------------------------------------------------------------

    function_definition: $ => seq(
      optional($.attributes),
      optional(field('modifiers', $.func_modifiers)),
      field('return_type', $.type),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      choice($.block, ';')
    ),

    func_modifiers: $ => repeat1(choice('static', 'inline', 'noinline')),

    function_template: $ => seq(
      $.template_params,
      $.function_definition
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')'
    ),

    parameter: $ => seq(
      optional($.attributes),
      field('type', $.type),
      optional(field('name', $.identifier)),
      optional(seq('=', field('default', $.expression)))
    ),

    // ----------------------------------------------------------------------------
    // Classes, Structs, Unions
    // ----------------------------------------------------------------------------

    class_decl: $ => prec.right(seq(
      'class',
      field('name', $.identifier),
      optional(seq('{', repeat($.member_decl), '}')),
      optional(';')
    )),

    class_template: $ => seq(
      $.template_params,
      $.class_decl
    ),

    struct_decl: $ => prec.right(seq(
      'struct',
      field('name', $.identifier),
      optional(seq('{', repeat($.member_decl), '}')),
      optional(';')
    )),

    member_decl: $ => choice(
      seq(choice('private', 'public', 'protected'), ':'),
      $.function_definition,
      $.function_template,
      seq($.variable_decl, ';'),
      $.default_initialization,
      $.static_if,
      $.declaration,
    ),

    enum_decl: $ => prec.right(seq(
      'enum',
      field('name', $.identifier),
      ':',
      field('base_type', $.type),
      '{',
      commaSep($.enum_constant),
      optional(','),
      '}',
      optional(';')
    )),

    enum_constant: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $.expression)))
    ),

    // ----------------------------------------------------------------------------
    // Type Aliases
    // ----------------------------------------------------------------------------

    alias_decl: $ => seq(
      'using',
      field('name', $.identifier),
      '=',
      field('type', $.type),
      ';'
    ),

    alias_template: $ => seq(
      $.template_params,
      'using',
      field('name', $.identifier),
      '=',
      field('type', $.type),
      ';'
    ),

    // ----------------------------------------------------------------------------
    // Extern and Export
    // ----------------------------------------------------------------------------

    export_decl: $ => seq(
      'export',
      choice(
        $.class_decl,
        $.function_definition,
        seq($.type, ';')
      )
    ),

    // ----------------------------------------------------------------------------
    // Static Assert & Static If/For
    // ----------------------------------------------------------------------------

    primitive_type: $ => choice(
      'void',
      'auto',
      'string',
      'bool',
      'float32',
      seq('int', optional(choice(
        seq(token.immediate('<'), $._template_arg_expression, token.immediate('>')),
        $.integer_suffix
      ))),
      seq('uint', optional(choice(
        seq(token.immediate('<'), $._template_arg_expression, token.immediate('>')),
        $.integer_suffix
      ))),
    ),

    modified_type: $ => seq('const', $.type),

    type_specifier: $ => choice(
      $._simple_type_specifier,
      $._templated_type_specifier
    ),

    _simple_type_specifier: $ => seq(
      optional($.scope_qualifier),
      $.identifier
    ),

    _templated_type_specifier: $ => prec.dynamic(1, seq(
      optional($.scope_qualifier),
      $.identifier,
      choice(
        seq(token.immediate('<'), commaSep1($._template_arg_expression), '>'),
        $.template_args
      )
    )),

    array_type: $ => prec.dynamic(20, prec.right(18, seq(
      optional($.memory_attributes),
      $.type,
      repeat1(seq('[', $.expression, ']'))
    ))),

    scope_qualifier: $ => prec.left(repeat1(seq(
      optional('template'),
      $.identifier,
      optional(seq(token.immediate('<'), commaSep1($._template_arg_expression), '>')),
      token.immediate('::')
    ))),

    attributes: $ => seq(
      '[[',
      commaSep1($.attribute),
      ']]'
    ),

    attribute: $ => choice(
      // Simple attributes
      $.identifier,
      // Attributes with arguments
      seq(
        $.identifier,
        '(',
        choice(
          commaSep1($.expression),
          $.identifier, // For Ecc(mode), etc.
        ),
        ')'
      )
    ),

    template_params: $ => seq(
      'template',
      '<',
      commaSep1($.template_param),
      '>'
    ),

    template_param: $ => choice(
      // typename T
      seq(
        'typename',
        $.identifier,
        optional(seq('=', $.type))
      ),
      // auto N
      seq(
        'auto',
        $.identifier,
        optional(seq('=', $._template_arg_expression))
      ),
      // Typed non-type parameter
      seq(
        $.type,
        $.identifier,
        optional(seq('=', $._template_arg_expression))
      ),
      // Template template parameter: template <typename> typename TT = template_id
      seq(
        'template',
        '<',
        commaSep1($.template_param_kind),
        '>',
        'typename',
        $.identifier,
        optional(seq('=', $.type_specifier))
      )
    ),

    _template_arg_expression: $ => choice(
      $.type,
      $.primary_expression,
      $.unary_expression,
      $.member_expression,
      $.call_expression,
      $.subscript_expression,
      // $.cast_expression,
      $._template_arg_ternary_expression,
      // Binary expressions excluding comparison operators
      prec.left(13, seq($._template_arg_expression, choice('*', '/', '%'), $._template_arg_expression)),
      prec.left(12, seq($._template_arg_expression, choice('+', '-'), $._template_arg_expression)),
      prec.left(9, seq($._template_arg_expression, choice('==', '!='), $._template_arg_expression)),
      prec.left(8, seq($._template_arg_expression, '&', $._template_arg_expression)),
      prec.left(7, seq($._template_arg_expression, '^', $._template_arg_expression)),
      prec.left(6, seq($._template_arg_expression, '|', $._template_arg_expression)),
      prec.left(5, seq($._template_arg_expression, '&&', $._template_arg_expression)),
      prec.left(4, seq($._template_arg_expression, '^^', $._template_arg_expression)),
      prec.left(3, seq($._template_arg_expression, '||', $._template_arg_expression)),
      seq('(', $.expression, ')'),
    ),

    block: $ => seq('{', repeat(choice(
      prec(1, $.declaration),
      $.statement
    )), '}'),

    expression_statement: $ => seq($.expression, ';'),

    return_statement: $ => seq('return', optional($.expression), ';'),

    atomic_statement: $ => seq('atomic', $.statement),

    if_statement: $ => prec.right(seq(
      'if',
      '(',
      $.expression,
      ')',
      $.statement,
      optional(seq('else', $.statement))
    )),

    range_for_statement: $ => seq(
      optional($.loop_attributes),
      'for',
      '(',
      'const',
      $.type,
      $.identifier,
      ':',
      $.expression,
      ')',
      $.statement
    ),

    do_while_statement: $ => seq(
      optional($.loop_attributes),
      'do',
      $.statement,
      'while',
      '(',
      $.expression,
      ')',
      ';'
    ),

    // ============================================================================
    // Expressions
    // ============================================================================

    binary_expression: $ => choice(
      // Precedence 13: Multiplicative
      prec.left(13, seq($.expression, choice('*', '/', '%'), $.expression)),
      
      // Precedence 12: Additive
      prec.left(12, seq($.expression, choice('+', '-'), $.expression)),
      
      // Precedence 11: Shift
      prec.left(11, seq($.expression, choice('<<', alias(seq('>', token.immediate('>')), '>>')), $.expression)),
      
      // Precedence 10: Relational
      // Precedence 10: Relational
      prec.dynamic(1, prec.left(10, seq($.expression, choice('<', '<=', '>', '>='), $.expression))),
      
      // Precedence 9: Equality
      prec.left(9, seq($.expression, choice('==', '!='), $.expression)),
      
      // Precedence 8: Bitwise AND
      prec.left(8, seq($.expression, '&', $.expression)),
      
      // Precedence 7: Bitwise XOR
      prec.left(7, seq($.expression, '^', $.expression)),
      
      // Precedence 6: Bitwise OR
      prec.left(6, seq($.expression, '|', $.expression)),
      
      // Precedence 5: Logical AND
      prec.left(5, seq($.expression, '&&', $.expression)),
      
      // Precedence 4: Logical XOR
      prec.left(4, seq($.expression, '^^', $.expression)),
      
      // Precedence 3: Logical OR
      prec.left(3, seq($.expression, '||', $.expression)),
    ),

    unary_expression: $ => choice(
      // Precedence 16: Unary minus
      prec(16, seq('-', $.expression)),
      
      // Precedence 15: Logical/bitwise NOT
      prec(15, seq(choice('!', '~'), $.expression)),
      
      // Precedence 14: sizeof-like operators
      prec(14, seq(
        choice('bitsizeof', 'bytesizeof', 'clog2'),
        choice(
          $.expression,
          seq('typename', $.type_specifier),
          $.type
        )
      )),
    ),

    // Precedence 17: Postfix/prefix increment/decrement
    update_expression: $ => choice(
      prec.right(17, seq(choice('++', '--'), $.expression)),
      prec.left(17, seq($.expression, choice('++', '--'))),
    ),

    // Precedence 1: Assignment operators
    assignment_expression: $ => prec.right(1, seq(
      $.expression,
      choice(
        '=',
        '+=', '-=', '*=', '/=', '%=',
        '<<=', alias(seq('>', token.immediate('>'), token.immediate('=')), '>>='),
        '&=', '|=', '^=',
        '&&=', '||=', '^^='
      ),
      $.expression
    )),

    // Precedence 2: Ternary conditional
    member_expression: $ => prec.left(18, seq(
      $.expression,
      token.immediate('.'),
      optional('template'),
      $.identifier,
      optional(choice(
        seq(token.immediate('<'), commaSep1($._template_arg_expression), '>'),
        $.template_args
      ))
    )),

    call_expression: $ => prec.left(18, seq(
      optional($.call_attributes),
      $.expression,
      $.argument_list
    )),

    argument_list: $ => seq(
      '(',
      commaSep($.expression),
      ')'
    ),

    cast_operator: $ => prec.right(18, seq(
      choice('cast', 'static_cast', 'reinterpret_cast', 'checked_cast'),
      optional(seq('<', $.type, '>'))
    )),

    // ----------------------------------------------------------------------------
    // Built-in Functions
    // ----------------------------------------------------------------------------

    qualified_identifier: $ => seq(
      $.scope_qualifier,
      optional('template'),
      $.identifier,
      optional(seq(token.immediate('<'), commaSep1($._template_arg_expression), '>'))
    ),

    // ----------------------------------------------------------------------------
    // Lambda Expressions
    // ----------------------------------------------------------------------------

    literal: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.boolean_literal,
      $.string_literal,
    ),

    integer_literal: $ => token(seq(
      choice(
        /0[bB]_?[01](_?[01])*/,                    // Binary
        /0[oO]_?[0-7](_?[0-7])*/,                  // Octal
        /0[xX]_?[0-9a-fA-F](_?[0-9a-fA-F])*/,      // Hexadecimal
        /[0-9](_?[0-9])*/                        // Decimal
      ),
      optional(seq(
        optional('_'),
        choice(/i\d+/, /u\d+/)                   // Suffix: i32, u16, etc.
      ))
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.string_interpolation,
      )),
      '"'
    ),

    string_content: $ => token.immediate(prec(1, /[^"\\{]+/)),

    _word: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    
    identifier: $ => $._word,
  }
});

// ============================================================================
// Helper Functions
// ============================================================================

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)));
}
