tools/editors/vscode-new/grammar/test/corpus/modules.txt
================================================================================
Module declaration
================================================================================

module data.fifo {
}

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (module_name
      (module_identifier_part)
      (module_identifier_part))
    (module_exports)))

================================================================================
Import statement
================================================================================

import data.memory

--------------------------------------------------------------------------------

(source_file
  (import_decl
    path: (module_name
      (module_identifier_part)
      (module_identifier_part))))

================================================================================
Import with alias
================================================================================

import data.fifo as fifo

--------------------------------------------------------------------------------

(source_file
  (import_decl
    path: (module_name
      (module_identifier_part)
      (module_identifier_part))
    alias: (identifier)))

================================================================================
Module with exports
================================================================================

module control.loop { pipelined_for, parallel_for }

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (module_name
      (module_identifier_part)
      (module_identifier_part))
    (module_exports
      (identifier)
      (identifier))))

================================================================================
Module with nested content
================================================================================

module math

uint32 abs(int32 x) {
    if (x < 0) { return -x; }
    return x;
}

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (module_name
      (module_identifier_part))
    (declaration
      (function_definition
        return_type: (type_specifier
          (identifier))
        name: (identifier)
        parameters: (parameter_list
          (parameter
            type: (type_specifier
              (identifier))
            name: (identifier)))
        (block
          (if_statement
            (binary_expression
              (identifier)
              (literal
                (integer_literal)))
            (block
              (return_statement
                (unary_expression
                  (identifier)))))
          (return_statement
            (identifier)))))))

================================================================================
Built-in import (.cmdargs)
================================================================================

import .cmdargs

--------------------------------------------------------------------------------

(source_file
  (import_decl
    path: (module_name)))

================================================================================
Built-in import with alias
================================================================================

import .cmdargs as Config

--------------------------------------------------------------------------------

(source_file
  (import_decl
    path: (module_name)
    alias: (identifier)))

================================================================================
Scope qualifier in expression
================================================================================

auto x = Config::HARTS;

--------------------------------------------------------------------------------

(source_file
  (declaration
    (variable_decl
      type: (primitive_type)
      name: (identifier)
      initializer: (qualified_identifier
        (scope_qualifier
          (identifier))
        (identifier)))))

================================================================================
Attributed export with template type
================================================================================

[[name("Foo")]] export Bar<uint32>;

--------------------------------------------------------------------------------

(source_file
  (declaration
    (export_decl
      (attributes
        (attribute
          (identifier)
          (literal
            (string_literal
              (string_content)))))
      (type_specifier
        (identifier)
        (identifier)))))
